--- a/dm-service/pom.xml
+++ b/dm-service/pom.xml
@@ -62,6 +62,11 @@
 			<artifactId>dynamodb-enhanced</artifactId>
 			<version>${dynamodb-enhanced.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
