--- a/dm-service/pom.xml
+++ b/dm-service/pom.xml
@@ -67,6 +67,11 @@
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.15.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
