--- a/dm-service/pom.xml
+++ b/dm-service/pom.xml
@@ -17,6 +17,7 @@
 	<properties>
 		<java.version>11</java.version>
 		<swagger.version>2.9.2</swagger.version>
+		<jacoco.version>0.8.5</jacoco.version>
 		<dynamodb-enhanced.version>2.16.15</dynamodb-enhanced.version>
 	</properties>
 	<dependencies>
@@ -83,7 +84,71 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+				<configuration>
+					<outputDirectory>${project.name}/jacocoreport/</outputDirectory>
+					<excludes>
+						<exclude>com/services/dm/config/**/*</exclude>
+						<exclude>com/services/dm/constants/**/*</exclude>
+						<exclude>com/services/dm/dto/**/*</exclude>
+						<exclude>com/services/dm/converter/**/*</exclude>
+						<exclude>com/services/dm/properties/**/*</exclude>
+						<exclude>com/services/dm/utils/**/*</exclude>
+						<exclude>com/services/dm/repositories/**/*</exclude>
+						<exclude>com/services/dm/services/**/*</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<id>prepare</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<phase>package</phase>
+						<configuration>
+							<haltOnFailure>true</haltOnFailure>
+							<rules>
+								<rule>
+									<element>BUNDLE</element>
+									<limits>
+										<limit>
+											<counter>LINE</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.60</minimum>
+										</limit>
+									</limits>
+								</rule>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
-
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>2.22.0</version>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
